vayu: rootdir: Remove ZRAM cold page writeback file
Bug: 140879284
Test: boot
Change-Id: I6914b215f0e85e3b4419c90c1f17869cfd2eeb59

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -176,6 +176,9 @@ on boot
 on boot && property:persist.vendor.usb.controller.default=*
     setprop vendor.usb.controller ${persist.vendor.usb.controller.default}
 
+on property:sys.boot_completed=1
+    rm /data/unencrypted/zram_swap
+
 service vendor.pd_mapper /vendor/bin/pd-mapper
     class core
     user system
