vayu: rootdir: Enable hvdcp_opti
Change-Id: I038ed0240db4bee39037b60b9ecbe90c2141a428

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -203,6 +203,7 @@ on charger
     chown root system /mnt/vendor/persist
     chmod 0771 /mnt/vendor/persist
     mkdir /mnt/vendor/persist/subsys 0770 root system
+    start vendor.hvdcp_opti
     start vendor.power_off_alarm
     setprop sys.usb.controller a600000.dwc3
     setprop sys.usb.configfs 1
@@ -234,6 +235,12 @@ service vendor.energy-awareness /vendor/bin/energy-awareness
     user system
     group system
     oneshot
+
+service vendor.hvdcp_opti /vendor/bin/hvdcp_opti
+    class main
+    user root
+    group system wakelock
+    writepid /dev/cpuset/system-background/tasks
 
 service nv_mac /vendor/bin/nv_mac
     class late_start
