vayu: rootdir: Add nodes to hide Magisk in banking apps
Some banking apps read the file /proc/net/unix to
find out whether things like Magisk are installed/running.

To prevent that, chmod it 440.
This file isn't needed by any other process when boot is finished.

I've tested this and banking apps that did not work before
and recognized Magisk being installed now don't recognize
that and work just fine.

Change-Id: I14902f3242a4b7b77357cbb25a6d7d35a854e368

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -302,3 +302,8 @@ on post-fs-data
     # Allow system to read measured_fps
     chown system graphics /sys/class/drm/sde-crtc-0/measured_fps
     chmod 0444 /sys/class/drm/sde-crtc-0/measured_fps
+
+on property:sys.boot_completed=1
+    # Restrict permissions to socket file
+    # to hide Magisk & co.
+    chmod 440 /proc/net/unix
