vayu: init: Allow system apps to read measured_fps node
Signed-off-by: Nauval Rizky <enuma.alrizky@gmail.com>
Signed-off-by: alanndz <alanndz@qmail.id>
Signed-off-by: David Setiawan <fryevia@foxmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -287,3 +287,8 @@ on post-fs-data
     # Allow system to adjust haptic level directly
     chown system system /sys/module/qti_haptics/parameters/level
     chmod 0664 /sys/module/qti_haptics/parameters/level
+    
+on post-fs-data
+    # Allow system to read measured_fps
+    chown system graphics /sys/class/drm/sde-crtc-0/measured_fps
+    chmod 0444 /sys/class/drm/sde-crtc-0/measured_fps
